// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkForPrimitive bundled executable does not exist, primitive not installed globally 1`] = `"Please ensure that Primitive (https://github.com/fogleman/primitive, written in Golang) is installed and globally available."`;

exports[`runPrimitive allows avg as value for background 1`] = `
Array [
  "primitive",
  Array [
    "-i",
    "-",
    "-o",
    "-",
    "-n",
    "8",
    "-m",
    "0",
    "-s",
    "1024",
    "-rep",
    "0",
    "-a",
    "128",
    "-bg",
    "avg",
    "-j",
    "0",
  ],
  Object {
    "input": Object {
      "data": Array [
        109,
        111,
        99,
        107,
        101,
        100,
        45,
        102,
        105,
        108,
        101,
        45,
        99,
        111,
        110,
        116,
        101,
        110,
        116,
      ],
      "type": "Buffer",
    },
  },
]
`;

exports[`runPrimitive allows hex as value for background 1`] = `
Array [
  "primitive",
  Array [
    "-i",
    "-",
    "-o",
    "-",
    "-n",
    "8",
    "-m",
    "0",
    "-s",
    "1024",
    "-rep",
    "0",
    "-a",
    "128",
    "-bg",
    "#654321",
    "-j",
    "0",
  ],
  Object {
    "input": Object {
      "data": Array [
        109,
        111,
        99,
        107,
        101,
        100,
        45,
        102,
        105,
        108,
        101,
        45,
        99,
        111,
        110,
        116,
        101,
        110,
        116,
      ],
      "type": "Buffer",
    },
  },
]
`;

exports[`runPrimitive executes primitive with custom config, applying default number of primitives 1`] = `
Array [
  "primitive",
  Array [
    "-i",
    "-",
    "-o",
    "-",
    "-n",
    "8",
    "-m",
    "5",
    "-s",
    "1024",
    "-rep",
    "0",
    "-a",
    "128",
    "-bg",
    "#040200",
    "-j",
    "0",
  ],
  Object {
    "input": Object {
      "data": Array [
        109,
        111,
        99,
        107,
        101,
        100,
        45,
        102,
        105,
        108,
        101,
        45,
        99,
        111,
        110,
        116,
        101,
        110,
        116,
      ],
      "type": "Buffer",
    },
  },
]
`;

exports[`runPrimitive executes primitive with default config 1`] = `
Array [
  "primitive",
  Array [
    "-i",
    "-",
    "-o",
    "-",
    "-n",
    "8",
    "-m",
    "0",
    "-s",
    "1024",
    "-rep",
    "0",
    "-a",
    "128",
    "-bg",
    "#040200",
    "-j",
    "0",
  ],
  Object {
    "input": Object {
      "data": Array [
        109,
        111,
        99,
        107,
        101,
        100,
        45,
        102,
        105,
        108,
        101,
        45,
        99,
        111,
        110,
        116,
        101,
        110,
        116,
      ],
      "type": "Buffer",
    },
  },
]
`;

exports[`runPrimitive executes primitive with landscape dimensions 1`] = `
Array [
  "primitive",
  Array [
    "-i",
    "-",
    "-o",
    "-",
    "-n",
    "8",
    "-m",
    "0",
    "-s",
    "600",
    "-rep",
    "0",
    "-a",
    "128",
    "-bg",
    "#040200",
    "-j",
    "0",
  ],
  Object {
    "input": Object {
      "data": Array [
        109,
        111,
        99,
        107,
        101,
        100,
        45,
        102,
        105,
        108,
        101,
        45,
        99,
        111,
        110,
        116,
        101,
        110,
        116,
      ],
      "type": "Buffer",
    },
  },
]
`;
